--- a/src/app/modules/wire/channel/v2/table/table.component.html
+++ b/src/app/modules/wire/channel/v2/table/table.component.html
@@ -36,8 +36,8 @@
         <m-tooltip
           ><span m-tooltip--anchor>𝒊</span>
           <ng-container i18n="@@WIRE__CHANNEL__REWARDS_PAYMENT_TOOLTIP"
-            >Minimum payment from supporters to receive the
-            reward.</ng-container
+            >The amount a member is required to pay per month to access
+            membership benefits.</ng-container
           >
         </m-tooltip>
       </div>
