--- a/src/app/modules/channels/v2/shop/memberships/edit.component.scss
+++ b/src/app/modules/channels/v2/shop/memberships/edit.component.scss
@@ -14,8 +14,57 @@ m-channelShopMemberships__edit {
   @media screen and (max-width: $max-mobile) {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
     border-radius: 0;
+  }
+
+  .m-channelShopMembershipsEdit__warning {
+    font-size: 14px;
+    line-height: 20px;
+    display: inline-flex;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+    @include m-theme() {
+      color: themed($m-textColor--secondary);
+    }
+
+    i {
+      font-size: 18px;
+      margin-right: 7px;
+      @include m-theme() {
+        color: themed($m-amber-dark);
+      }
+    }
+
+    span {
+      font-weight: 300;
+    }
+
+    a {
+      @include m-theme() {
+        font-weight: 300;
+        color: themed($m-link);
+      }
+    }
+  }
+
+  .m-channelShopMembershipsEdit__descriptionField {
+    textarea {
+      font-weight: 400;
+    }
+  }
+
+  .m-form__customInputWrapper__checkbox {
+    &.disabled {
+      cursor: default;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
+    @media screen and (max-width: $max-mobile) {
+      max-width: 90px;
+    }
   }
 }
 
