--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -167,11 +167,32 @@
 
         &.hasUnitLabel {
           align-items: center;
+          @include m-theme() {
+            box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
+          }
           input {
             min-width: 0;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            box-shadow: none !important;
           }
           span {
-            margin-right: 8px;
+            padding: 10px;
+            border-top-left-radius: 2px;
+            border-bottom-left-radius: 2px;
+            @include m-theme() {
+              border: 1px solid themed($m-borderColor--primary);
+              border-right-width: 0px;
+            }
+          }
+          &:focus {
+            &:not(:read-only) {
+              span {
+                @include m-theme() {
+                  border-color: themed($m-blue);
+                }
+              }
+            }
           }
         }
       }
@@ -187,7 +208,6 @@
       select:not(.m-dateDropdowns__select) {
         flex: 1 1 100%;
       }
-      // todojm
       @media screen and (max-width: 1000px) {
         label,
         input,
