(feat): implement cta modal for pay and card modal... plus nicer sass handling - closes #3508 #3509

--- a/src/app/modules/payments/new-card/new-card.component.html
+++ b/src/app/modules/payments/new-card/new-card.component.html
@@ -1,7 +1,10 @@
-<div
-  class="mdl-spinner mdl-js-spinner is-active"
-  [mdl]
-  [hidden]="intentKey"
-></div>
+<m-loadingSpinner [inProgress]="!intentKey"></m-loadingSpinner>
 
-<iframe [src]="url" #iframe *ngIf="intentKey"> </iframe>
+<iframe
+  [src]="url"
+  #iframe
+  *ngIf="intentKey"
+  allowtransparency="true"
+  style="height: 120px"
+>
+</iframe>
