--- a/src/app/modules/payments/select-card/select-card.component.html
+++ b/src/app/modules/payments/select-card/select-card.component.html
@@ -3,14 +3,13 @@
     [ngModel]="paymentMethodId"
     (ngModelChange)="paymentMethodId = $event; selected.next(paymentMethodId)"
   >
+    <option value="" *ngIf="paymentMethods.length === 0 && !inProgress"
+      >No Cards</option
+    >
     <option *ngFor="let card of paymentMethods" [value]="card.id">
       {{ card.card_brand | titlecase }} ***{{ card.card_last4 }} -
       {{ card.card_expires }}
     </option>
     <option value="new">Add a new card</option>
   </select>
-</div>
-
-<div class="m-paymentsSelectCard__addNewCard" *ngIf="paymentMethodId === 'new'">
-  <m-payments__newCard (completed)="loadCards()"> </m-payments__newCard>
 </div>
