--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
@@ -1,4 +1,6 @@
-m-wireCreator__marketingBlock {
+@import 'defaults.scss';
+
+:host {
   .m-wireCreator__marketingBlock {
     display: flex;
     align-items: flex-end;
