--- a/src/app/modules/wire/v2/creator/wire-creator.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/wire-creator.component.ng.scss
@@ -1,4 +1,6 @@
-m-wireCreator {
+@import 'defaults.scss';
+
+:host {
   @media screen and (max-width: $min-tablet) {
     display: flex;
     flex-direction: column;
