--- a/src/app/modules/wire/v2/creator/wire-creator.component.html
+++ b/src/app/modules/wire/v2/creator/wire-creator.component.html
@@ -5,12 +5,21 @@
   <m-wireCreator__ownerBlock
     *ngIf="!(service.isUpgrade$ | async)"
   ></m-wireCreator__ownerBlock>
-  <m-wireCreator__form></m-wireCreator__form>
+  <m-wireCreator__form
+    *ngIf="!(service.supportTier$ | async)"
+  ></m-wireCreator__form>
   <m-wireCreator__shop
     *ngIf="
-      (supportTiers.list$ | async)?.length && !(service.isUpgrade$ | async)
+      (supportTiers.list$ | async)?.length &&
+      !(service.isUpgrade$ | async) &&
+      !(service.supportTier$ | async)
     "
     (onDismissIntent)="onDismissIntent()"
   ></m-wireCreator__shop>
+
+  <m-wireCreator__supportTierConfirmation
+    *ngIf="service.supportTier$ | async"
+  ></m-wireCreator__supportTierConfirmation>
+
   <m-wireCreator__toolbar (onSubmit)="onSubmit()"></m-wireCreator__toolbar>
 </div>
