(fix): APP_CDN can not be used within .ng.scss

--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.ng.scss
@@ -19,11 +19,11 @@
     }
 
     &.isPlus {
-      background-image: url('<%=APP_CDN%>/assets/photos/confetti-concert.png');
+      background-image: url('../../../../../../assets/photos/confetti-concert.png');
     }
 
     &.isPro {
-      background-image: url('<%=APP_CDN%>/assets/photos/confetti-concert-red.jpg');
+      background-image: url('../../../../../../assets/photos/confetti-concert-red.jpg');
     }
 
     @media screen and (max-width: $max-mobile) {
