--- a/src/app/modules/wire/v2/creator/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/toolbar/toolbar.component.ng.scss
@@ -1,6 +1,6 @@
 @import 'defaults.scss';
 
-.m-wireCreator__toolbar {
+:host .m-wireCreator__toolbar {
   padding: 30px 40px;
   margin: 26px 0 0;
   border-top: 1px solid;
