--- a/src/app/modules/wire/v2/creator/shop/shop.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/shop/shop.component.ng.scss
@@ -1,6 +1,6 @@
 @import 'defaults.scss';
 
-.m-wireCreator__shop {
+:host .m-wireCreator__shop {
   margin: 14px 0 0;
 
   .m-wireCreatorShop__heading {
