Don't show remind button for paywalled posts

--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -435,7 +435,7 @@
                     (done)="wireSubmitted($event)"
                   ></m-wire-button>
                   <minds-button-remind
-                    *ngIf="originalEntity.type !== 'comment'"
+                    *ngIf="originalEntity.type !== 'comment' && allowReminds"
                     [object]="originalEntity"
                   ></minds-button-remind>
                   <div>
