--- a/src/app/modules/pro/channel/channel.component.html
+++ b/src/app/modules/pro/channel/channel.component.html
@@ -1,124 +1,130 @@
 <div class="m-pro__channel">
   <ng-container *ngIf="channel">
-    <div class="m-proChannel__topbar">
-      <ng-container
-        *ngIf="!channel.pro_settings.has_custom_logo; else customLogo"
-      >
-        <minds-avatar
-          [object]="channel"
-          [routerLink]="homeRouterLink"
-        ></minds-avatar>
-      </ng-container>
-      <ng-template #customLogo>
-        <img
-          class="m-proChannelTopbar__logo"
-          [src]="channel.pro_settings.logo_image"
-          [routerLink]="homeRouterLink"
-        />
-      </ng-template>
+    <m-proChannel__splash
+      *ngIf="showSplash"
+      (closeSplash)="showSplash = false"
+    ></m-proChannel__splash>
+    <ng-container *ngIf="!showSplash">
+      <div class="m-proChannel__topbar">
+        <ng-container
+          *ngIf="!channel.pro_settings.has_custom_logo; else customLogo"
+        >
+          <minds-avatar
+            [object]="channel"
+            [routerLink]="homeRouterLink"
+          ></minds-avatar>
+        </ng-container>
+        <ng-template #customLogo>
+          <img
+            class="m-proChannelTopbar__logo"
+            [src]="channel.pro_settings.logo_image"
+            [routerLink]="homeRouterLink"
+          />
+        </ng-template>
 
-      <div class="m-proChannelTopbar__searchBox">
-        <m-pro__searchBox
+        <div class="m-proChannelTopbar__searchBox">
+          <m-pro__searchBox
+            [(query)]="query"
+            (onSearch)="search()"
+            (onClearSearch)="clearSearch()"
+          ></m-pro__searchBox>
+        </div>
+
+        <ng-container *ngIf="!collapseNavItems">
+          <a
+            class="m-proChannelTopbar__navItem"
+            [routerLink]="feedRouterLink"
+            routerLinkActive="active"
+            i18n="@@COMMON__FEED"
+          >
+            Feed
+          </a>
+
+          <a
+            class="m-proChannelTopbar__navItem"
+            [routerLink]="videosRouterLink"
+            routerLinkActive="active"
+            i18n="@@COMMON__VIDEOS"
+          >
+            Videos
+          </a>
+
+          <a
+            class="m-proChannelTopbar__navItem"
+            [routerLink]="imagesRouterLink"
+            routerLinkActive="active"
+            i18n="@@COMMON__IMAGES"
+          >
+            Images
+          </a>
+
+          <a
+            class="m-proChannelTopbar__navItem"
+            [routerLink]="articlesRouterLink"
+            routerLinkActive="active"
+            i18n="@@COMMON__ARTICLES"
+          >
+            Articles
+          </a>
+
+          <a
+            class="m-proChannelTopbar__navItem"
+            [routerLink]="groupsRouterLink"
+            routerLinkActive="active"
+            i18n="@@COMMON__GROUPS"
+          >
+            Groups
+          </a>
+
+          <ng-container
+            *ngIf="currentUser?.guid != channel.guid; else ownerNavLinks"
+          >
+            <a
+              class="m-proChannelTopbar__navItem"
+              (click)="wire()"
+              i18n="@@COMMON__WIRE"
+              >Pay</a
+            >
+
+            <m-pro__subscribeButton></m-pro__subscribeButton>
+          </ng-container>
+          <ng-template #ownerNavLinks>
+            <a
+              *ngIf="isProDomain"
+              class="m-proChannelTopbar__navItem"
+              [href]="proSettingsHref"
+              target="root_minds"
+              i18n="@@COMMON__SETTINGS"
+            >
+              Settings
+            </a>
+
+            <a
+              *ngIf="!isProDomain"
+              class="m-proChannelTopbar__navItem"
+              [routerLink]="proSettingsLink"
+              i18n="@@COMMON__SETTING"
+            >
+              Settings
+            </a>
+          </ng-template>
+        </ng-container>
+
+        <m-pro__hamburger-menu
           [(query)]="query"
           (onSearch)="search()"
           (onClearSearch)="clearSearch()"
-        ></m-pro__searchBox>
+        ></m-pro__hamburger-menu>
       </div>
 
-      <ng-container *ngIf="!collapseNavItems">
-        <a
-          class="m-proChannelTopbar__navItem"
-          [routerLink]="feedRouterLink"
-          routerLinkActive="active"
-          i18n="@@COMMON__FEED"
-        >
-          Feed
-        </a>
+      <div class="m-proChannel__body">
+        <router-outlet></router-outlet>
+      </div>
 
-        <a
-          class="m-proChannelTopbar__navItem"
-          [routerLink]="videosRouterLink"
-          routerLinkActive="active"
-          i18n="@@COMMON__VIDEOS"
-        >
-          Videos
-        </a>
-
-        <a
-          class="m-proChannelTopbar__navItem"
-          [routerLink]="imagesRouterLink"
-          routerLinkActive="active"
-          i18n="@@COMMON__IMAGES"
-        >
-          Images
-        </a>
-
-        <a
-          class="m-proChannelTopbar__navItem"
-          [routerLink]="articlesRouterLink"
-          routerLinkActive="active"
-          i18n="@@COMMON__ARTICLES"
-        >
-          Articles
-        </a>
-
-        <a
-          class="m-proChannelTopbar__navItem"
-          [routerLink]="groupsRouterLink"
-          routerLinkActive="active"
-          i18n="@@COMMON__GROUPS"
-        >
-          Groups
-        </a>
-
-        <ng-container
-          *ngIf="currentUser?.guid != channel.guid; else ownerNavLinks"
-        >
-          <a
-            class="m-proChannelTopbar__navItem"
-            (click)="wire()"
-            i18n="@@COMMON__WIRE"
-            >Pay</a
-          >
-
-          <m-pro__subscribeButton></m-pro__subscribeButton>
-        </ng-container>
-        <ng-template #ownerNavLinks>
-          <a
-            *ngIf="isProDomain"
-            class="m-proChannelTopbar__navItem"
-            [href]="proSettingsHref"
-            target="root_minds"
-            i18n="@@COMMON__SETTINGS"
-          >
-            Settings
-          </a>
-
-          <a
-            *ngIf="!isProDomain"
-            class="m-proChannelTopbar__navItem"
-            [routerLink]="proSettingsLink"
-            i18n="@@COMMON__SETTING"
-          >
-            Settings
-          </a>
-        </ng-template>
-      </ng-container>
-
-      <m-pro__hamburger-menu
-        [(query)]="query"
-        (onSearch)="search()"
-        (onClearSearch)="clearSearch()"
-      ></m-pro__hamburger-menu>
-    </div>
-
-    <div class="m-proChannel__body">
-      <router-outlet></router-outlet>
-    </div>
-
-    <div class="m-proChannel__footer">
-      <m-pro--channel-footer></m-pro--channel-footer>
-    </div>
+      <div class="m-proChannel__footer">
+        <m-pro--channel-footer></m-pro--channel-footer>
+      </div>
+    </ng-container>
   </ng-container>
 </div>
 
