--- a/src/app/modules/wire/v2/creator/owner-block/owner-block.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/owner-block/owner-block.component.ng.scss
@@ -27,7 +27,7 @@
       }
     }
 
-    .m-wireCreatorOwnerBlockChannelBanner__avatar .minds-avatar {
+    ::ng-deep .m-wireCreatorOwnerBlockChannelBanner__avatar .minds-avatar {
       position: absolute;
       bottom: 0;
       left: 50%;
