--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -226,8 +226,8 @@
       [saving]="inProgress"
       (click)="register($event)"
     >
-      <ng-container i18n="@@FORMS__REGISTER__JOIN_MINDS_NOW_ACTION">
-        Join Minds Now
+      <ng-container i18n="@@FORMS__REGISTER__JOIN_NOW_ACTION">
+        Join Now
       </ng-container>
     </m-shadowboxSubmitButton>
   </div>
