--- a/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
@@ -91,7 +91,7 @@
       class="m-cardButton-v2"
       (click)="onSelectIntent.emit(supportTier)"
     >
-      Select
+      Join
     </a>
   </div>
 </div>
