--- a/src/app/modules/wire/v2/creator/toolbar/toolbar.component.html
+++ b/src/app/modules/wire/v2/creator/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
 </ng-template>
 
 <div class="m-wireCreator__toolbar m-modalV2__toolbar">
-  <m-poweredBy product="Pay"></m-poweredBy>
+  <m-poweredBy product="Pay" link="/pay"></m-poweredBy>
 
   <div class="m-wireCreatorToolbar__message">
     <div
