(chore): swap feature flags to be paywall-2020 and plus-2020

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -39,7 +39,7 @@
       <m-channelAbout__brief></m-channelAbout__brief>
       <ng-container *mIfBrowser>
         <m-channelShop__brief
-          *mIfFeature="'support-tiers'; else wireRewardsBrief"
+          *mIfFeature="'paywall-2020'; else wireRewardsBrief"
         ></m-channelShop__brief>
         <ng-template #wireRewardsBrief>
           <m-channelShop__briefWireRewards></m-channelShop__briefWireRewards>
