--- a/src/app/modules/composer/components/popup/monetize/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/monetize.component.html
@@ -1,4 +1,4 @@
-<ng-container *mIfFeature="'plus-2020'; else v1">
+<ng-container *mIfFeature="'paywall-2020'; else v1">
   <m-composer__monetizeV2
     (dismissIntent)="dismissIntent.emit()"
   ></m-composer__monetizeV2>
