(chore): use correct whitepaper link - closes #3560

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -58,7 +58,7 @@
 
         <li>
           <a
-            href="https://cdn-assets.minds.com/front/dist/assets/whitepapers/03_27_18_Minds%20Whitepaper%20V0.1.pdf"
+            href="https://cdn-assets.minds.com/front/dist/en/assets/documents/Whitepaper-v0.5.pdf"
             target="_blank"
             i18n="@@COMMON_FOOTER__WHITEPAPER"
           >
